--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -106,17 +106,33 @@
 				android:textColor="#ff8000"
 				android:textColorLink="#ff8000"
 				android:textSize="20dp" />
+
 		</LinearLayout>
 
 		<ImageButton
 			android:id="@+id/togglePlay"
-			android:layout_width="100dp"
-			android:layout_height="100dp"
+			android:layout_width="65dp"
+			android:layout_height="65dp"
 			android:layout_gravity="center"
 			android:layout_margin="10dp"
 			android:background="@drawable/play"
 			android:contentDescription="@string/toggle" />
-
+			<ScrollView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:scrollbars="vertical"
+    android:layout_weight="1">
+			<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="wrap_content"
+                  android:scrollbars="horizontal"
+                  android:layout_height="wrap_content">
+	<TableLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="match_parent"
+	    android:id="@+id/scheduleTable" >
+	</TableLayout>
+	</HorizontalScrollView>
+</ScrollView>
 	</LinearLayout>
 
 </FrameLayout>
