--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,7 +38,7 @@
 			android:marqueeRepeatLimit="marquee_forever"
 			android:scrollHorizontally="true"
 			android:singleLine="true"
-			android:textColor="#ff8000"
+			style="@style/TextStyle"
 			android:textSize="20dp" />
 
 		<LinearLayout
@@ -55,7 +55,7 @@
 				android:gravity="right"
 				android:singleLine="true"
 				android:text="@string/artist"
-				android:textColor="#ff8000"
+				style="@style/TextStyle"
 				android:textSize="20dp" />
 
 			<TextView
@@ -70,7 +70,7 @@
 				android:marqueeRepeatLimit="marquee_forever"
 				android:scrollHorizontally="true"
 				android:singleLine="true"
-				android:textColor="#ff8000"
+				style="@style/TextStyle"
 				android:textColorLink="#ff8000"
 				android:textSize="20dp" />
 		</LinearLayout>
@@ -89,7 +89,7 @@
 				android:gravity="right"
 				android:singleLine="true"
 				android:text="@string/title"
-				android:textColor="#ff8000"
+				style="@style/TextStyle"
 				android:textSize="20dp" />
 
 			<TextView
@@ -104,7 +104,7 @@
 				android:marqueeRepeatLimit="marquee_forever"
 				android:scrollHorizontally="true"
 				android:singleLine="true"
-				android:textColor="#ff8000"
+				style="@style/TextStyle"
 				android:textColorLink="#ff8000"
 				android:textSize="20dp" />
 
@@ -127,7 +127,7 @@
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:gravity="center"
-		    android:textColor="#ff8000"
+		    style="@style/TextStyle"
 		    android:textSize="30dp"
 		    android:text="CLOCK" />
 						
