--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,14 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+	 <style name="TextStyle">
+	   <item name="android:paddingLeft">4px</item>
+	   <item name="android:paddingBottom">4px</item>
+	   <item name="android:textColor">#ff8000</item>
+	   <item name="android:textSize">12sp</item>
+	   <item name="android:shadowColor">#555555</item>
+	   <item name="android:shadowDx">1</item>
+	   <item name="android:shadowDy">1</item>
+	   <item name="android:shadowRadius">1</item>
+	 </style>
 </resources>
